Fix overlapping text

--- a/loveletter.css
+++ b/loveletter.css
@@ -218,7 +218,7 @@
     position: absolute;
     bottom: 8%;
     left: 5%;
-    font-size: 70%;
+    font-size: 68%;
 }
 
 #explanation_card2 {
